# cpp_gamedev_engine

./: .gitignore  CMakeLists.txt  README.md  cmake-build.yml  cmake-multi-platform.yml  startup_project.sh
.github/workflows/: cmake-build.yml  cmake-multi-platform.yml
engine/core/: Application.cpp  Entity.cpp  EntityManager.cpp  InputActions.cpp  InputManager.cpp  Window.cpp  Window.h
engine/core/include/: Application.h  Entity.h  EntityManager.h  InputActions.h  InputManager.h  Window.h
engine/graphics/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
engine/graphics/include/: Renderer.h  Shader.h
engine/graphics/shaders/: vertex.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
testgame/: main.cpp
